--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
     background-image: url(IMG/img01.jpg);
-    background-color: white;
+    background-color: gray;
     font-size: 18px;
     background-image: url(https://images.squarespace-cdn.com/content/v1/5b8e9316e17ba3e400af6bf6/1549449919999-IZB4YLZVWXPQNZE9KYWW/ke17ZwdGBToddI8pDm48kLPswmMOqQZ9-Q6KHLjvbpZ7gQa3H78H3Y0txjaiv_0fDoOvxcdMmMKkDsyUqMSsMWxHk725yiiHCCLfrh8O1z5QPOohDIaIeljMHgDF5CVlOqpeNLcJ80NK65_fV7S1UTcpTqfU-ZEsztPyQLxhSSK-PhJjRDDFQG0l3_ZnmWi1QjT9byXZM3ISxo3y1NRptg/001.jpg?format=1500w);
-    background-repeat: no-repeat;
+    background-repeat:no-repeat;
     background-attachment: fixed;
-    background-position: center;
-    background-size: fill;
+    background-position:center;
+    background-size:cover ;
     font-family: "Roboto-Light";
 }
 h1 {
