--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ h2 {
     opacity: 0.8;
 }
 p{
-    color: whitesmoke;
-    text-shadow: 1px 1px 5px grey;
+    color: azure;
+    text-shadow: 2px 2px 2px grey;
 }
 a:hover {
   background-color: yellow;
