--- a/style.css
+++ b/style.css
@@ -11,15 +11,15 @@ body {
 }
 h1 {
     text-decoration: none;
-    color:honeydew;
+    color:azure;
     text-align: center;
 }
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
   .button {
       background-color: ghostwhite; 
@@ -108,7 +108,7 @@ img{
   display: table;
 }
 
-/* Gallery*/
+/* ------------------------------------------------------------------------------------------------------------GALLERY---------------------------------------------------------------------------------*/
 
 * {
   box-sizing: border-box;
@@ -408,8 +408,116 @@ img {
 }
 
 
+/* ------------------------------------------------------------------------------------------------------------TOURS--------------------------------------------------------------------------------- */
+
+.galleryA{
+    margin: 10px 50px;
+    margin-left: 20px;
+}
+.galleryB{
+  transition: 1s;
+  padding: 15px;
+  width: 600px;
+  height: 350px;
+}
+.galleryB:hover{
+  filter: grayscale(100%);
+  transform: scale(1.1);
+}
+body{
+	background-image:url("images/back.jpg");
+	background-repeat:none;
+	padding:-0px;
+	background-size:240%;
+	background-position:left;
+}
+.para{
+	background-color:#3c4745;
+	padding:10px 30px; 
+	margin-left: 35px;
+	margin-right:35px;
+	text-align:justify;
+	font-family: 'Roboto-Light';
+	color:white;
+	border:2px solid white;
+	border-radius:10px;
+	clear:both;
+	display:block;
+}
+.para1{
+	background-color:#3c4745;
+	padding:10px 30px; 
+	margin-left: 35px;
+	margin-right:35px;
+	text-align:justify;
+	font-family: 'Roboto-Thin';
+	font-size:14px;
+	color:white;
+	border:2px solid white;
+	border-radius:10px;
+	clear:both;
+	display:block;
+	width:40%;
+	float:right;
+	margin-top:-1385px;
+}
+.para2{
+	background-color:#3c4745;
+	padding:10px 30px; 
+	margin-left: 35px;
+	margin-right:35px;
+	text-align:justify;
+	font-family: 'Roboto-Thin';
+	font-size:14px;
+	color:white;
+	border:2px solid white;
+	border-radius:10px;
+	clear:both;
+	display:block;
+	width:40%;
+	float:right;
+	margin-top:-1055px;
+}
+.para3{
+	background-color:#3c4745;
+	padding:10px 30px; 
+	margin-left: 35px;
+	margin-right:35px;
+	text-align:justify;
+	font-family: 'Roboto-Thin';
+	font-size:14px;
+	color:white;
+	border:2px solid white;
+	border-radius:10px;
+	clear:both;
+	display:block;
+	width:40%;
+	float:right;
+	margin-top:-685px;
+}
+.para4{
+	background-color:#3c4745;
+	padding:10px 30px; 
+	margin-left: 35px;
+	margin-right:35px;
+	text-align:justify;
+	font-family: 'Roboto-Thin';
+	font-size:14px;
+	color:white;
+	border:2px solid white;
+	border-radius:10px;
+	clear:both;
+	display:block;
+	width:40%;
+	float:right;
+	margin-top:-335px;
+}
+
+
+/* ------------------------------------------------------------------------------------------------------------FOOTER--------------------------------------------------------------------------------- */
+
 .footer {
-    font-size: 8px;
+    font-size: 14px;
     font-family: "MeriendaOne-Regular"; /* Font #2 */
     position: fixed;
     opacity: 0.5; 
